# mick_robot

./: CMakeLists.txt  README.md  Update.md  config.sh  package.xml  test.pgm
gsy4ws4wd_bringup/: CMakeLists.txt  README.md  package.xml
gsy4ws4wd_bringup/launch/: gsy4ws4wd_bringup.launch
gsy4ws4wd_bringup/msg/: ultrasonic.msg
gsy4ws4wd_bringup/src/: chassis_4ws4wd.cpp  chassis_4ws4wd.cpp~  chassis_4ws4wd_node.cpp
launch/: mick_bringup.launch
map/: cartograph_test.yaml
mick_bringup/: CMakeLists.txt  README.md  package.xml
mick_bringup/launch/: keyboard.launch  mick_bringup.launch  mickx4_bringup.launch  mickx4_bringup_v2.launch  test_odom.launch
mick_bringup/scripts/: mick.rules
mick_bringup/src/: .mick_robot.cpp.swp  mick_bringup.cpp  mick_chassis_msg.h  mickx4_bringup.cpp  mickx4_bringup_v2.cpp  mickx4_bringup_v3.1.cpp  mickx4_bringup_v3.cpp
mick_description/: CMakeLists.txt  package.xml
mick_description/launch/: display.launch  display.launch.py  display_stl.launch.py  display_xacro.launch.py
mick_description/rviz/: urdf.rviz
mick_description/urdf/: mickX4.urdf  mickrobot.gv  mickrobot.urdf  mickrobot.urdf.xacro  mickrobot_stlfile.urdf  p3at.urdf.xacro  rplidar_a2.urdf.xacro
mick_navigation/: CMakeLists.txt  package.xml
mick_navigation/config/: dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
mick_navigation/launch/: amcl.launch  amcl_no_rviz.launch  gmapping.launch  gmapping_no_rviz.launch  hector_slam.launch  mickx4_amcl.launch  mickx4_carto_2D.launch  mickx4_gmapping.launch
mick_navigation/map/: 1.pgm  1.yaml  2.pgm  2.yaml  A108.pgm  A108.yaml  cartograph_test.pbstream  cartograph_test.yaml  cqu_lab.pgm  cqu_lab.yaml  cqu_lab_hospital.yaml  test.pgm  test.yaml
mick_navigation/mick_cartographer/: readme.md
mick_navigation/mick_gmapping/: readme.md
mick_navigation/params/: base_local_planner_params.yaml
mick_navigation/rviz/: gmapping.rviz  localization.rviz  localization_mickx4.rviz  mickx4_cartographer.rviz
mick_navigation_2D/: README.md
mick_navigation_2D/amcl/: CMakeLists.txt  package.xml
mick_navigation_2D/cartographer/: readme.md
mick_navigation_2D/gmapping/: readme.md
mick_navigation_2D/mick_gmapping/: readme.md
mick_navigation_2D/navigation2/: CMakeLists.txt  README.md  mick_nav2.sh  package.xml
mick_navigation_2D/odom_tf/: CMakeLists.txt  package.xml
mick_navigation_sim/gmapping/: readme.md
mick_navigation_sim/navigation/: CMakeLists.txt  package.xml
mick_navigation_sim/navigation_sim/: CMakeLists.txt  package.xml
mickrobot_bringup/: CMakeLists.txt  README.md  package.xml
mickrobot_bringup/launch/: mickrobotx4.launch.py  mickrobotx4_ROS1.launch  mickrobotx4_ros2.launch.py
mickrobot_bringup/src/: mick_chassis_msg.h  mick_chassis_protocol.cpp  mick_chassis_protocol.h  mick_chassis_protocol.hpp  mickx4_bringup_v3.0.cpp  mickx4_bringup_v3.1.cpp  mickx4_bringup_v3.cpp  mickx4_bringup_v3_backup.cpp
mickrobot_cartographer/: CMakeLists.txt  package.xml
mickrobot_cartographer/config/: cartographer.rviz  mickrobot_2d.lua
mickrobot_cartographer/launch/: cartographer.launch.py
mickrobot_cartographer/map/: mickrobot_map.pgm  mickrobot_map.yaml
mickrobot_description/: CMakeLists.txt  package.xml
mickrobot_description/launch/: display.launch.py  gazebo.launch.py
mickrobot_description/model/: robot.gazebo  robot.xacro
mickrobot_description/rviz/: urdf.rviz  urdf_gazebo.rviz
mickrobot_description/urdf/: mickrobot.gv  mickrobot.urdf  mickrobot.urdf.xacro  mickrobot_stl.urdf  mickrobot_stl_rviz.urdf  mickrobot_stl（复件）.urdf  robot.gazebo
mickrobot_description/worlds/: nav.world  wyt.world
mickrobot_navigation/: readme.md
navigation_sim/: readme.md
scripts/: mick.rules
sensor_interface/imu_100d4_node/: CMakeLists.txt  README.md  package.xml
sensor_interface/imu_100d4_node/launch/: imu_100D2.launch.py
sensor_interface/imu_100d4_node/src/: imu_100d4_node.cpp
sensor_interface/imu_driver/: CMakeLists.txt  README.md  package.xml
sensor_interface/keyboard/: package.xml  setup.cfg  setup.py
sensor_interface/oradar_ros/: CMakeLists.txt  LICENSE  README.md  change notes.md  package.xml  package_ros1.xml
sensor_interface/oradar_ros/launch/: ms200_scan.launch  ms200_scan.launch.py  ms200_scan_view.launch  ms200_scan_view.launch.py
sensor_interface/oradar_ros/rviz/: oradar_scan.rviz
sensor_interface/oradar_ros/rviz2/: oradar_scan.rviz
sensor_interface/oradar_ros/sdk/: CMakeLists.txt  README.md
sensor_interface/oradar_ros/sdk/cmake/: install_package.cmake  oradar_base.cmake  oradar_parse.cmake
sensor_interface/oradar_ros/sdk/core/: CMakeLists.txt
sensor_interface/oradar_ros/sdk/core/base/: CMakeLists.txt  locker.h  thread.h  timer.h  utils.h  v8stdint.h
sensor_interface/oradar_ros/sdk/core/common/: ChannelDevice.h
sensor_interface/oradar_ros/sdk/core/math/: CMakeLists.txt  angles.h
sensor_interface/oradar_ros/sdk/core/network/: ActiveSocket.cpp  ActiveSocket.h  CMakeLists.txt  PassiveSocket.cpp  PassiveSocket.h  SimpleSocket.cpp  SimpleSocket.h
sensor_interface/oradar_ros/sdk/core/serial/: CMakeLists.txt  common.h  serial.cpp  serial.h
sensor_interface/oradar_ros/sdk/core/serial/impl/unix/: list_ports_linux.cpp  lock.c  unix.h  unix_serial.cpp  unix_serial.h
sensor_interface/oradar_ros/sdk/core/serial/impl/windows/: CMakeLists.txt  list_ports_win.cpp  win.h  win_serial.cpp  win_serial.h
sensor_interface/oradar_ros/sdk/samples/: CMakeLists.txt  blocking_c_api_test.c  blocking_test.cpp  non-blocking_test.cpp
sensor_interface/oradar_ros/sdk/src/: CMakeLists.txt  ord_lidar_c_api_driver.cpp  ord_lidar_c_api_driver.h  ord_lidar_driver.cpp  ord_lidar_driver.h  ordlidar_protocol.h
sensor_interface/oradar_ros/sdk/src/filters/: CMakeLists.txt  FullScanFilter.cpp  FullScanFilter.h
sensor_interface/oradar_ros/src/: oradar_scan_node.cpp
sensor_interface/ros_rslidar_robosense/rslidar_rangeimage/src/: CMakeLists.txt  ToRange.cpp  ToRange.h  range_node.cpp
src/: .mick_robot.cpp.swo  ROS串口读取.c  mick_robot.cpp
(+128 files in other folders)
